nested routes created

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-country.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-country.hbs
@@ -1,6 +1,6 @@
-  <div class="cd-button" {{action 'openModal'}}>
-    <input type="submit" value="Add Country">
-  </div>
+<div class="ui button" {{action 'openModal'}}>
+  Add country
+</div>
 
 
 {{#ui-modal name="newCountry" class="small newCountry"}}
