--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-gender.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-gender.hbs
@@ -1,6 +1,5 @@
-
-<div class="cd-button" {{action 'openModal'}}>
-  <input type="submit" value="Add Gender">
+<div class="ui button" {{action 'openModal'}}>
+  Add gender
 </div>
 
 {{#ui-modal name="newGender" class="small newGender"}}
