--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
@@ -30,6 +30,11 @@
       <form class="cd-form floating-labels" {{action "save" on="submit"}}>
 
         <fieldset>
+
+          type of account,
+          personal Information,
+          Confirmation
+
           <legend>Account Settings</legend>
           <div class="icon">
             <label class="cd-label">Account Name</label>
