--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-welcome.hbs
@@ -5,7 +5,17 @@
         <h1 class="ui inverted header">
           <span class="library">Welcome Stephanie</span>
         </h1>
+        <div class="ui hidden divider"></div>
+        <div class="ui hidden divider"></div>
+        <div class="ui center aligned grid">
 
+          <!--<a href="/appointment"  class="ui large inverted download button" >-->
+          <!--Book Appointment-->
+          <!--</a>-->
+          <a href="/admin/manage-accounts"  class="ui large inverted download button" >
+            Manage account
+          </a>
+        </div>
 
       </div>
     </div>
