--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-gender.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-gender.hbs
@@ -1,5 +1,6 @@
 <p style="cursor: pointer;" {{action 'openModal' }}
-   title="Delete"><i class="red remove icon"></i>
+   title="Delete">
+  <img src="/assets/images/trash-simple.svg">
 </p>
 
 {{#ui-modal name= modalName class=modalName }}
