--- a/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
@@ -1,6 +1,9 @@
 <div class="ui horizontal segment items">
   <div class = "ui grid">
+
     <div class="eight wide column">
+      <div class="ui hidden divider"></div>
+
       <div class="ui raised very padded text segment">
         <div class="ui grid">
 
@@ -60,26 +63,30 @@
           </div>
         </div>
       </div>
+      <div class="ui hidden divider"></div>
+
     </div>
     <div class="eight wide column">
+      <div class="ui hidden divider"></div>
+
       <div class="fourteen wide row">
         <div class="ui raised very padded text segment">
           <div class="item">
             <div class="middle aligned content">
               <p style="font-weight: bold;">History:</p>
               <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+              <div class="two wide row" style="position: absolute; left: 618px;">
+                <a href="/patient-file"  id="client" class="ui inverted download button" >
+                  Client's file <i class="right arrow icon"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <br>
-      <div class="two wide row" style="float: right">
+      <div class="ui hidden divider"></div>
 
-        <a href="/patient-file"  id="client" class="ui inverted download button" >
-          Client's file <i class="right arrow icon"></i>
-        </a>
-
-      </div>
     </div>
+
   </div>
 </div>
