--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -14,7 +14,7 @@
         </h1>
         <div class="ui hidden divider"></div>
         <div class="ui hidden divider"></div>
-        <div style="padding-left: 322px">
+        <div class="ui center aligned grid">
 
           <!--<a href="/appointment"  class="ui large inverted download button" >-->
             <!--Book Appointment-->
@@ -30,32 +30,38 @@
   </div>
 
   <div class="ui vertical stripe intro segment" id="about">
-    <div class="ui stackable centered very relaxed stacked aligned grid container">
+    <div class="ui stackable very relaxed stacked aligned grid container">
+      <span class="library" style="font-size: 4em;position: relative;left: 30px;">About Us</span>
+
       <div class="row">
         <div class="four wide column">
           <img class="ui image" src="assets/images/home/Steph-4491-1200x1800.jpg">
         </div>
         <div class="twelve wide column">
+          <br>
           <h1 class="ui header">Stephanie Marcotte</h1>
+          <p style="color: grey;font-size: 1.4em;margin-top: -15px;">
+           Practitioner
+          </p>
           <p>I believe movement is life.<br>
             I believe you can heal your body with functional movement patterns.<br>
             I believe it is never to late to create change in a body & it can happen fast.<br>
             I believe your body knows what it needs.<br>
-            I believe every system in your body relies on a functional musculoskeletal system.<br><br>
-            All systems in the body work on movement:<br><br>
-          <ul>
-            <li>the heart beats</li>
-            <li>the lungs breath</li>
-            <li>the stomach grinds</li>
-            <li>the colon transports</li>
-            <li>the blood flows</li>
-            <li>the nerves conduct</li>
-            <li>the muscles contract</li>
-          </ul><br>
-          Dis-ease in the body begins when movement is impaired. Restore your proper design for movement and your pain will cease. No fancy machinery or magic pills required; your body already has everything it needs to heal.<br><br>
-          I believe you need to trust yourself.<br>
-          I believe you need to take responsibility for your present state of health.<br>
-          I believe you can become free of your pain.
+            I believe every system in your body relies on a functional musculoskeletal system.
+            <!--All systems in the body work on movement:<br><br>-->
+          <!--<ul>-->
+            <!--<li>the heart beats</li>-->
+            <!--<li>the lungs breath</li>-->
+            <!--<li>the stomach grinds</li>-->
+            <!--<li>the colon transports</li>-->
+            <!--<li>the blood flows</li>-->
+            <!--<li>the nerves conduct</li>-->
+            <!--<li>the muscles contract</li>-->
+          <!--</ul><br>-->
+          <!--Dis-ease in the body begins when movement is impaired. Restore your proper design for movement and your pain will cease. No fancy machinery or magic pills required; your body already has everything it needs to heal.<br><br>-->
+          <!--I believe you need to trust yourself.<br>-->
+          <!--I believe you need to take responsibility for your present state of health.<br>-->
+          <!--I believe you can become free of your pain.-->
           </p>
         </div>
       </div>
