--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,6 +1,4 @@
-<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/reset.css"> <!-- CSS reset -->
-<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/doc.css">
-
-
+<!--<link integrity="" rel="stylesheet" href="/assets/css/reset.css"> &lt;!&ndash; CSS reset &ndash;&gt;-->
+<link integrity="" rel="stylesheet" href="/assets/css/reset.css"> <!-- CSS reset -->
 
 {{outlet}}
