--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-province.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-province.hbs
@@ -1,6 +1,5 @@
-
-<div class="cd-button" {{action 'openModal'}}>
-  <input type="submit" value="Add Province">
+<div class="ui button" {{action 'openModal'}}>
+  Add province
 </div>
 
 
