--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -1,5 +1,5 @@
-<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/home-style.css">
-
+{{!--<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/home-style.css">
+--}}
 <!--<style>-->
 <!--.ui.visible.left.sidebar ~ .fixed,-->
 <!--.ui.visible.left.sidebar ~ .pusher {-->
@@ -8,7 +8,7 @@
 <!--</style>-->
 
 
-<div id="example" class="index pushable">
+<div id="example" class="index">
 
 
   <div class="full height">
@@ -20,7 +20,9 @@
             <div class="ui logo shape">
               <div class="sides">
                 <div class="active ui side">
-                  {{#link-to 'admin'}}<img class="ui image" src="assets/images/home/Header.png">{{/link-to}}
+                {{#link-to 'admin'}}
+                    <img class="ui image selfStart" src="/assets/images/home/Header.png">
+                {{/link-to}}
                 </div>
               </div>
             </div>
@@ -31,7 +33,7 @@
             <a  href="../exercises"class="item">Exercise</a>
             <a href="../forms" class="item">Forms</a>
             <a href="../questions" class="item">Questions</a>
-            <a href="../manage-selections" class="item">Configure</a>
+            <a href="/admin/manage-selections" class="item">Configure</a>
             <a href="../appointment" class="item">Appointments</a>
             <a id="login" href="../" class="item">Log out</a>
           </div>
