--- a/SelfStart/SelfStartFrontEnd/app/templates/components/config-selection.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/config-selection.hbs
@@ -1,16 +1,10 @@
-<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
 
-<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/table-style.css"> <!-- Resource style -->
 
-{{#admin-nav}}
-
-  <div class="masthead segment bg4">
+  <div class="masthead segment bg5">
     <div class="ui container">
       <div class="introduction">
         <h1 class="ui inverted header">
-        <span class="tagline">
-           Configure Selections
-        </span>
+          <span class="library" style="font-size: 1.25em">Configure Selections</span>
         </h1>
         <div class="ui hidden divider"></div>
 
@@ -62,76 +56,182 @@
 
 
 <br>
+
   {{#if genderSelected}}
-  <section id="cd-section">
-    <section id="cd-table">
-      <div class="cd-table-container">
-        <ul>
-          <li style="  text-align: center; font-size: 1.2rem; text-transform: uppercase;
-                          font-weight: bold; color: white; background-color: #f58b4c;">Genders</li>
-          {{#each model.gender as |gender|}}
 
-            <li>
-              {{gender.name}}
-              <p style="float: right;">{{delete-gender ID=gender.id}}</p>
-              <p style="float: right; padding-right: 2%;">{{edit-gender ID=gender.id}}</p>
-            </li>
-
-          {{/each}}
-        </ul>
+    <div class="ui very padded container segment" id="top" style="padding-bottom: 1em;">
+      <div class="ui grid" style="margin-top: -30px;">
+        <div class="left thirteen wide column" style="margin-top: -5px;">
+          <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">Genders</p>
+        </div>
+        <div class="right two wide column" style="padding-left: 50px;">
+          {{add-gender}}
+        </div>
       </div>
+      <br><br><br><br>
 
-    </section> <!-- cd-table -->
-    {{add-gender}}
-    <br><br>
-  </section>
+      <table class="ui fixed table" id="tb" style="border: none;border-color: white;">
+        <tbody>
+        <tr style="font-weight: bold;">
+          <td class="left aligned fourteen wide column">Name</td>
+          <td class="center aligned two wide column">Actions</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <div class="ui divider"></div>
+
+      <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+        <tbody >
+        {{#each model.gender as |gender|}}
+          <tr>
+            <td class="left aligned fourteen wide column">
+              {{gender.name}}
+            </td>
+            <td class="right aligned one wide column">
+              <p>{{edit-gender ID=gender.id}}</p>
+            </td>
+            <td class="left aligned one wide column">
+              <p>{{delete-gender ID=gender.id}}</p>
+            </td>
+          </tr>
+        {{/each}}
+        </tbody>
+      </table>
+    </div>
   {{/if}}
 
   {{#if countrySelected}}
-  <section id="cd-section">
-    <section id="cd-table">
-      <div class="cd-table-container">
-        <ul>
-          <li style="  text-align: center; font-size: 1.2rem; text-transform: uppercase;
-                          font-weight: bold; color: white; background-color: #f58b4c;">Countries</li>
-          {{#each model.country as |country|}}
+    <div class="ui very padded container segment" id="top" style="padding-bottom: 1em;">
+      <div class="ui grid" style="margin-top: -30px;">
+        <div class="left thirteen wide column" style="margin-top: -5px;">
+          <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">Countries</p>
+        </div>
+        <div class="right two wide column" style="padding-left: 50px;">
+          {{add-country}}
+        </div>
+      </div>
+      <br><br><br><br>
 
-            <li>{{country.name}}
-              <p style="float: right;">{{delete-country ID=country.id}}</p>
-              <p style="float: right; padding-right: 2%;">{{edit-country ID=country.id}}</p>
-            </li>
+      <div class="ui left aligned seven wide column">
+        <div class="ui form" >
+          <div class="two fields" >
 
-          {{/each}}
-        </ul>
+            <div class="field">
+              {{#ui-dropdown class="selection" selected=queryPath onChange=(action (mut queryPath))}}
+                <div class="default text">{{modelAttributes.firstObject.name}}</div>
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                  {{#each modelAttributes as |attribute|}}
+                    <div class="item" data-value="{{attribute.key}}">
+                      {{attribute.name}}
+                    </div>
+                  {{/each}}
+                </div>
+              {{/ui-dropdown}}
+            </div>
+
+            <div class="field">
+              <div class="ui icon input">
+                <i class="search icon"></i>
+                {{input type="text" placeholder="Search..."  value=query }}
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-    </section> <!-- cd-table -->
-    {{add-country}}
-    <br><br>
-  </section>
+      <div style="display: inline">
+      <table class="ui fixed table" style="border: none;border-color: white;">
+        <tbody>
+        <tr style="font-weight: bold;">
+          {{#each modelAttributes as |column|}}
+            <th class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
+              {{#if (eq column.dir 'asc')}}
+                <i class="sort ascending icon"></i>
+              {{/if}}
+              {{#if (eq column.dir 'desc')}}
+                <i class="sort descending icon"></i>
+              {{/if}}
+              {{#if (eq column.dir '')}}
+                <i class="sort icon"></i>
+              {{/if}}
+            </th>
+          {{/each}}
+          <td class="center aligned two wide column">Actions</td>
+        </tr>
+        </tbody>
+      </table>
+      </div>
+
+      <div class="ui divider"></div>
+
+      <div  id="myWin" style="height:600px; overflow-y: scroll; overflow-x: hidden;">
+      <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+        <tbody >
+        {{#each countriesModel as |country|}}
+          <tr>
+            {{#each modelAttributes as |column|}}
+
+              <td class={{column.class}}>
+                {{get country column.key}}
+              </td>
+            {{/each}}
+            <td class="right aligned one wide column">
+              <p>{{edit-country ID=country.id}}</p>
+            </td>
+            <td class="left aligned one wide column">
+              <p>{{delete-country ID=country.id flagDelete=flagDelete}}</p>
+            </td>
+          </tr>
+        {{/each}}
+        </tbody>
+      </table>
+    </div>
+    </div>
 {{/if}}
 
 
   {{#if provinceSelected}}
-  <section id="cd-section">
-    <section id="cd-table">
-      <div class="cd-table-container">
-        <ul>
-          <li style="  text-align: center; font-size: 1.2rem; text-transform: uppercase;
-                          font-weight: bold; color: white; background-color: #f58b4c;">Provinces</li>
-          {{#each model.province as |province|}}
-
-            <li>{{province.name}}
-              <p style="float: right;">{{delete-province ID=province.id}}</p>
-            </li>
-
-          {{/each}}
-        </ul>
+    <div class="ui very padded container segment" id="top" style="padding-bottom: 1em;">
+      <div class="ui grid" style="margin-top: -30px;">
+        <div class="left thirteen wide column" style="margin-top: -5px;">
+          <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">Provinces</p>
+        </div>
+        <div class="right two wide column" style="padding-left: 50px;">
+          {{add-province}}
+        </div>
       </div>
+      <br><br><br><br>
 
-    </section> <!-- cd-table -->
-    {{add-province}}
-    <br><br>
-  </section>
+      <table class="ui fixed table" id="tb" style="border: none;border-color: white;">
+        <tbody>
+        <tr style="font-weight: bold;">
+          <td class="left aligned fourteen wide column">Name</td>
+          <td class="center aligned two wide column">Actions</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <div class="ui divider"></div>
+
+      <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+        <tbody >
+        {{#each model.province as |province|}}
+          <tr>
+            <td class="left aligned fourteen wide column">
+              {{province.name}}
+            </td>
+            <td class="right aligned one wide column">
+              <p>{{edit-province ID=province.id}}</p>
+            </td>
+            <td class="left aligned one wide column">
+              <p>{{delete-province ID=province.id}}</p>
+            </td>
+          </tr>
+        {{/each}}
+        </tbody>
+      </table>
+    </div>
+
   {{/if}}
-{{/admin-nav}}
