--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-gender.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-gender.hbs
@@ -1,5 +1,5 @@
-<p style="cursor: pointer;" {{action 'openModal' }}
-   title="Edit"><i class="grey write icon"></i>
+<p style="cursor: pointer; " title="Edit"  {{action 'openModal' }}>
+  <img src="/assets/images/pencil.svg">
 </p>
 
 {{#ui-modal name= modalName class=modalName }}
