answers are stored in the front end for all question types except rating

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-assessment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-assessment.hbs
@@ -1,5 +1,8 @@
 <div class="ui form">
 {{#each assessmentModel.questions as |q index|}}
-    {{get-answers question=q qNumber = index assessment=assessmentModel}}
+    {{get-answers question=q qNumber = index assessment=assessmentModel assessid = assessmentModel.id}}
 {{/each}}
+<button {{action "Submit"}}>
+    Submit
+</button>
 </div>
