created nested practitioner routes

--- a/SelfStart/SelfStartFrontEnd/app/styles/app.scss
+++ b/SelfStart/SelfStartFrontEnd/app/styles/app.scss
@@ -97,7 +97,7 @@ body{
 #mini-nav a:hover, #mini-nav a:focus {
   border-radius: 6px;
   background: white;
-  color: blue;
+  color: deepskyblue;
   min-width: 200px;
 }
 #mini-nav a:hover span, #mini-nav a:focus span {
@@ -121,7 +121,7 @@ a img {
 
 #mini-nav a i {
   border-radius: 6px;
-  color: blue;
+  color: deepskyblue;
   background: white;
   display: block;
   float: left;
