--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -29,12 +29,11 @@
           </div>
 
           <div class="right menu inverted">
-            <a href="../patients" class="item">Clients</a>
+            <a href="/admin/accounts" class="item">Accounts</a>
             <a  href="../exercises"class="item">Exercise</a>
-            <a href="../forms" class="item">Forms</a>
-            <a href="../questions" class="item">Questions</a>
+            <a  href="../rehabplans"class="item">Menu Builder</a>
+            <a href="/admin/forms" class="item">Forms</a>
             <a href="/admin/manage-selections" class="item">Configure</a>
-            <a href="../appointment" class="item">Appointments</a>
             <a id="login" href="../" class="item">Log out</a>
           </div>
         </div>
