--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-physiotherapist.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-physiotherapist.hbs
@@ -1,5 +1,6 @@
 <p style="cursor: pointer;" {{action 'openModal' }}
-   title="Delete"><i class="red remove icon"></i>
+   title="Delete">
+  <img src="/assets/images/trash-simple.svg">
 </p>
 
 {{#ui-modal name= modalName class=modalName }}
@@ -12,8 +13,8 @@
   <br>
 
   <div class="actions" style="padding:0">
-    <div class="ok " style="float:left; width: 50%; cursor: pointer; background: #fc7169; color:white; text-align: center;">Yes</div>
-    <div class="cancel " style="float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">No</div>
 
+    <div class="ok " style="padding:.6em; float:left; width: 50%; cursor: pointer; background: #fc7169; color:white; text-align: center;">Yes</div>
+    <div class="cancel " style="padding:.6em; float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">No</div>
   </div>
 {{/ui-modal}}
