--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -70,9 +70,8 @@
         </div>
 
         <div class="field">
-          <button class="fluid ui blue button" style="max-width: 100%; height: 50px;" value="Submit">Login</button>
+          <button class="fluid ui blue button" style="max-width: 100%; height: 50px;">Login</button>
         </div>
-
 
         <div class="field">
           <p style="cursor: pointer; text-align: center;  text-decoration: underline; padding-top: 65px"{{action 'forgotPassword'}}>forgot your password?</p>
