--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
@@ -1,151 +1,129 @@
-{{#admin-nav}}
+<div class="ui button" {{action 'openModal'}}>
+  Add Client
+</div>
 
-  <div class="masthead segment bg2">
-    <div class="ui container">
-      <div class="introduction">
-        <h1 class="ui inverted header">
-        <span class="tagline">
-           Add New Client
-        </span>
-        </h1>
-        <div class="ui hidden divider"></div>
-        <div style="padding-left: 368px">
-          <a href="/patients"  class="ui large inverted download button" >
-            <i class="arrow left icon"></i>Return to Clients
-          </a>
+{{#ui-modal name="newPatient" class="newPatient"}}
+  <i class="close icon"></i>
+  <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
+
+  <div class="header">
+    Adding new Client
+  </div>
+  <div class="scrolling content">
+
+    <form id="edit" class="cd-form floating-labels" {{action "submit" on="submit"}}>
+
+
+      <legend>Account Settings</legend>
+      <div class="field" style="margin: 1em 0;">
+        {{input class="email" type="email" value = email placeholder="Email" required = true}}
+      </div>
+      <div class="field" style="margin: 1em 0;">
+        {{input class="lock" type="text" value = encryptedPassword placeholder="Temperary password" required = true}}
+      </div>
+
+      <div class="ui hidden divider"></div>
+      <div class="ui hidden divider"></div>
+
+      <legend>Personal Info</legend>
+
+      <div class="ui hidden divider"></div>
+      <div class="ui two column grid">
+        <div class="column " style="margin: 1em 0;">
+          {{input class="user" type="text" value = givenName placeholder="First name" required = true}}
+        </div>
+        <div class="column " style="margin: 1em 0;">
+          {{input class="user" type="text" value = familyName placeholder="Last Name" required = true}}
+        </div>
+      </div>
+
+      <div class="ui two column grid">
+        <div class="column " style="margin: 1em 0;">
+          <input class="date" type="date" placeholder="Date of birth" value= {{selectedDate}}  onchange={{action 'assignDate' value="target.value"}} required>
         </div>
 
+        <div class="column " style="margin: 1em 0;">
+          <p class="cd-select icon">
+            <select class="people" onchange={{action 'selectGender' value="target.value"}}>
+              {{#each genderModel as |oneGender|}}
+                <option value={{oneGender.name}} selected={{eq gender oneGender.name}}>
+                  {{oneGender.name}}
+                </option>
+              {{/each}}
+            </select>
+          </p>
+        </div>
       </div>
-    </div>
+
+      <div class="field" style="margin: 1em 0;">
+        {{input class="card" type="text" value = healthCardNumber placeholder="Health Card Number" required = true}}
+      </div>
+
+      <div class="field" style="margin: 1em 0;">
+        {{input class="phone" type="text" value = phoneNumber placeholder="Phone number" required = true}}
+      </div>
+
+      <div class="ui hidden divider"></div>
+      <div class="ui hidden divider"></div>
+
+
+
+
+      <legend>Address</legend>
+
+      <div class="ui hidden divider"></div>
+
+
+      <div class="ui two column grid">
+        <div class="column " style="margin: 1em 0;">
+          {{input class="home" type="text" value = streetNumber placeholder="Street Number" required = true}}
+        </div>
+        <div class="column " style="margin: 1em 0;">
+          {{input class="home" type="text" value = streetName placeholder="Street Name" required = true}}
+        </div>
+      </div>
+
+
+      <div class="ui two column grid">
+        <div class="column " style="margin: 1em 0;">
+          {{input class="bookmark" type="text" placeholder="Unit Number" value = apartment}}
+        </div>
+
+        <div class="column " style="margin: 1em 0;">
+          {{input class="flag" type="text" value = postalCode placeholder="Postal/Zip code" required = true}}
+        </div>
+      </div>
+
+
+      <div class="ui three column grid" id="grid">
+        <div class="column " style="margin: 1em 0;">
+          <p class="cd-select icon">
+            <select class="world" onchange={{action 'selectCountry' value="target.value"}}>
+              {{#each conutryModel as |oneCountry|}}
+                <option value={{oneCountry.name}} selected={{eq country oneCountry.name}}>
+                  {{oneCountry.name}}
+                </option>
+              {{/each}}
+            </select>
+          </p>
+        </div>
+        <div class="column " style="margin: 1em 0;">
+          {{input class="world" type="text" value = province placeholder="Province/State" required = true}}
+        </div>
+        <div class="column " style="margin: 1em 0;">
+          {{input class="world" type="text" value = city placeholder="City" required = true}}
+        </div>
+      </div>
+
+      <div class="field">
+        <button class="fluid ui blue button" style="max-width: 100%; height: 50px;">
+          Submit
+        </button>
+      </div>
+
+    </form>
   </div>
 
 
-  <div class="background">
 
-    <br>
-
-    <div class = "ui centered very padded raised segment container" style="background-color: white">
-      <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/form-style.css"> <!-- Resource style -->
-
-      <form class="cd-form floating-labels" {{action "save" on="submit"}}>
-
-        <fieldset>
-
-          type of account,
-          personal Information,
-          Confirmation
-
-          <legend>Account Settings</legend>
-          <div class="icon">
-            <label class="cd-label">Account Name</label>
-            {{input class="user" type="text" value = userAccountName required = true}}
-          </div>
-          <div class="icon">
-            <label class="cd-label">Temporary Password</label>
-            {{input class="lock" type="text" value = encryptedPassword required = true}}
-          </div>
-        </fieldset>
-
-        <fieldset>
-          <legend>Personal Info</legend>
-
-          <div class="icon">
-            <label class="cd-label">First Name</label>
-            {{input class="user" type="text" value = givenName required = true}}
-          </div>
-          <div class="icon">
-            <label class="cd-label">Last Name</label>
-            {{input class="user" type="text" value = familyName required = true}}
-          </div>
-          <div class="icon">
-            <label class="cd-label">Date of Birth</label>
-            <input class="date" type="date" value={{selectedDate}}  onchange={{action 'assignDate' value="target.value"}} required>
-          </div>
-
-          <div >
-            <h4>Gender</h4>
-            <p class="cd-select icon">
-              <select class="people" onchange={{action 'selectGender' value="target.value"}} required=true>
-                <option selected="selected">
-                  Select Gender
-                </option>
-                {{#each genderModel as |oneGender|}}
-                  <option value={{oneGender.name}} selected={{eq gender oneGender.name}}>
-                    {{oneGender.name}}
-                  </option>
-                {{/each}}
-              </select>
-            </p>
-          </div>
-
-
-          <div class="icon">
-            <label class="cd-label">Health Card Number</label>
-            {{input class="card" type="text" value = healthCardNumber required = true}}
-          </div>
-        </fieldset>
-
-
-        <fieldset>
-          <legend>Address</legend>
-
-          <div class="icon">
-            <label class="cd-label">Number</label>
-            {{input class="home" type="text" value = streetNumber required = true}}
-          </div>
-          <div class="icon">
-            <label class="cd-label">Street Name</label>
-            {{input class="home" type="text" value = streetName required = true}}
-          </div>
-          <div class="icon">
-            <label class="cd-label" for="cd-name">Unit</label>
-            {{input class="home" type="text" value = apartment}}
-          </div>
-
-          <div class="icon">
-            <label class="cd-label" for="cd-name">Postal/ZIP Code</label>
-            {{input class="flag" type="text" value = postalCode required = true}}
-          </div>
-
-
-          <div >
-            <h4>Country</h4>
-            <p class="cd-select icon">
-              <select class="world" onchange={{action 'selectCountry' value="target.value"}} required=true>
-                <option selected="selected">
-                  Select Country
-                </option>
-                {{#each conutryModel as |oneCountry|}}
-                  <option value={{oneCountry.name}} selected={{eq country oneCountry.name}}>
-                    {{oneCountry.name}}
-                  </option>
-                {{/each}}
-              </select>
-            </p>
-          </div>
-
-        </fieldset>
-
-
-        <fieldset>
-          <legend>Contact Info</legend>
-
-          <div class="icon">
-            <label class="cd-label" for="cd-name">Phone Number</label>
-            {{input class="phone" type="text" value = phoneNumber required = true}}
-          </div>
-
-          <div class="icon">
-            <label class="cd-label" for="cd-email">Email</label>
-            {{input class="email" type="email" value = email required = true}}
-          </div>
-
-          <div class="cd-button" style="float: left">
-            <input type="submit" value="Submit">
-          </div>
-        </fieldset>
-
-      </form>
-    </div>
-  </div>
-{{/admin-nav}}
+{{/ui-modal}}
