--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-physiotherapist.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-physiotherapist.hbs
@@ -1,47 +1,77 @@
-<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/form-style.css"> <!-- Resource style -->
+<div class="ui fluid  button" {{action 'openModal'}}>
+  Add practitioner
+</div>
 
-<form class="cd-form floating-labels" {{action "save" on="submit"}}>
-  <br><br>
-  <fieldset>
-    <legend>Personal Info</legend>
+{{#ui-modal name="newPhysio" class="newPhysio"}}
+  <i class="close icon"></i>
+  <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
 
-    <div class="icon">
-      <label class="cd-label">First Name</label>
-      {{input class="user" type="text" value = givenName required = true}}
-    </div>
-    <div class="icon">
-      <label class="cd-label">Last Name</label>
-      {{input class="user" type="text" value = familyName required = true}}
-    </div>
+  <div class="header">
+    Adding New Practitioner
+  </div>
+  <div class="scrolling content">
 
-    <div class="icon">
-      <label class="cd-label">Employment start date</label>
-      <input class="date" type="date" value={{selectedDate}}  onchange={{action 'assignDate' value="target.value"}} required>
-    </div>
-  
-  </fieldset>
-  
-  <fieldset>
-    <legend>Contact Info</legend>
-
-    <div class="icon">
-      <label class="cd-label" for="cd-email">Email</label>
-      {{input class="email" type="email" value = email required = true}}
-    </div>
-  </fieldset>
-
-  <fieldset>
-
-    <div>
+    <form class="cd-form floating-labels" {{action "submit" on="submit"}}>
 
 
-      <div class="cd-button">
-        <input type="submit" value="Submit">
+      <legend>Account Settings</legend>
+      <div class="field" style="margin: 1em 0;">
+        {{input class="email" type="email" value = email placeholder="Email" required = true}}
+      </div>
+      <div class="field" style="margin: 1em 0;">
+        {{input class="lock" type="text" value = encryptedPassword placeholder="Temperary password" required = true}}
       </div>
 
-    </div>
+      <div class="ui hidden divider"></div>
+      <div class="ui hidden divider"></div>
 
+      <legend>Personal Info</legend>
 
+      <div class="ui hidden divider"></div>
+      <div class="ui two column grid">
+        <div class="column " style="margin: 1em 0;">
+          {{input class="user" type="text" value = givenName placeholder="First name" required = true}}
+        </div>
+        <div class="column " style="margin: 1em 0;">
+          {{input class="user" type="text" value = familyName placeholder="Last Name" required = true}}
+        </div>
+      </div>
 
-  </fieldset>
-</form>
+      <div class="ui two column grid">
+        <div class="column " style="margin: 1em 0;">
+          <input class="date" type="date" placeholder="Date of hire" value= {{selectedHiredDate}}  onchange={{action 'assignHiredDate' value="target.value"}} required>
+        </div>
+
+        <div class="column " style="margin: 1em 0;">
+          <input class="date" type="date" placeholder="Date of release" value= {{selectedFiredDate}}  onchange={{action 'assignFiredDate' value="target.value"}}>
+        </div>
+      </div>
+
+      <div class="field" style="margin: 1em 0;">
+        <p class="cd-select icon">
+          <select class="people" onchange={{action 'selectGender' value="target.value"}}>
+            {{#each genderModel as |oneGender|}}
+              <option value={{oneGender.name}} selected={{eq gender oneGender.name}}>
+                {{oneGender.name}}
+              </option>
+            {{/each}}
+          </select>
+        </p>
+      </div>
+
+      <div class="field" style="margin: 1em 0;">
+        {{input class="phone" type="text" value = phoneNumber placeholder="Phone number" required = true}}
+      </div>
+
+      <div class="ui hidden divider"></div>
+      <div class="ui hidden divider"></div>
+
+      <div class="field">
+        <button class="fluid ui blue button" value="submit" style="max-width: 100%; height: 50px;">
+          Submit
+        </button>
+      </div>
+
+    </form>
+  </div>
+{{/ui-modal}}
