--- a/SelfStart/SelfStartFrontEnd/app/templates/components/physio-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/physio-welcome.hbs
@@ -2,7 +2,7 @@
   <div class="ui container">
     <div class="introduction">
       <h1 class="ui inverted header">
-        <span class="library">Practitioner Landing Page</span>
+        <span class="library">Practitioner's Page</span>
       </h1>
       <div class="ui hidden divider"></div>
       <div class="ui hidden divider"></div>
