--- a/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
@@ -22,8 +22,8 @@
     <div class="card" style="max-width: 230px;">
 
       <div class="content">
-        <a class="header" href="/practitioner/client-file">Client's Files</a>
-        <div cl ass="meta">{{model.givenName}} {{model.familyName}}</div>
+        <a class="header">{{#link-to 'practitioner.client-file' model.id}}Client's Files{{/link-to}}</a>
+        <div class="meta">{{model.givenName}} {{model.familyName}}</div>
       </div>
     </div>
 
