Skype functionality works

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -1,6 +1,6 @@
 
-<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/home-style.css">
 
+           <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/home-style.css">
 <!--<style>-->
   <!--.ui.visible.left.sidebar ~ .fixed,-->
   <!--.ui.visible.left.sidebar ~ .pusher {-->
@@ -27,6 +27,7 @@
 
 
             <div class="right menu inverted">
+              <a class="item"><div id="SkypeButton_Call"></div></a>
               <a class="item">About</a>
               <a class="item">How it Works</a>
               <a class="item">Services</a>
