Added a Rehab Client Linker Model and Route

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-image.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-image.hbs
@@ -22,10 +22,10 @@
             <br><br>
         </div>
 
-        {{!-- <div class = "inline">
+        <div class = "inline">
             <button class="ui button" type="submit" {{action "submit"}}>Add New Image(s)</button>
             <button class="ui button" type="submit" {{action "cancel"}}>Cancel</button>
-        </div> --}}
+        </div>
     </form>
 </div>
 
