--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
@@ -11,7 +11,7 @@
 
         <div class="field">
             <label>Password</label>
-            {{input type ="text" value=PWord placeholder="Password"}}
+            {{input type ="password" value=PWord placeholder="Password"}}
         </div>
 
         <div class = "inline">
