All question answers for assessment test save to the backend

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-assessment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-assessment.hbs
@@ -1,6 +1,6 @@
 <div class="ui form">
 {{#each assessmentModel.questions as |q index|}}
-    {{get-answers question=q qNumber = index assessment=assessmentModel assessid = assessmentModel.id}}
+    {{get-answers question=q assessment=assessmentModel qNumber = index assessid = assessmentModel.id}}
 {{/each}}
 <button {{action "Submit"}}>
     Submit
